--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Kolokwium 1</title>
-    <link rel="stylesheet" href="style.css"></head>
+    <link rel="stylesheet" href="style.css">
+    <script src=navbar.js"></script>
+
+</head>
+
 </head>
 <body>
 
+<nav class="nav">
+    <a class="nav-link active" href="index.html">Home</a>
+    <a class="nav-link active" href="kontakt.html">Kontakt</a>
+    </nav>
 
+
+<script src="script.js"></script>
+...Home...
 <div class="box"></div>
-
-<button class="button">Zmień kolor</button>
-
+<button class="button" onclick="color()" id="btn">Zmień kolor</button>
 
 </body>
 </html>
+
